fixed formmating on sidebar.blade.php and fixed text alignment on sidebar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -83,6 +83,7 @@ div, section {
     position: absolute;
     display: none;
     margin-left: 3vw;
+    text-align: left;
 }
 
 .content {
